--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="insurance/insurance-ejb/src/main/java"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/insurance-ejb"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
